--- a/index.html
+++ b/index.html
@@ -1551,6 +1551,7 @@ limitations under the License.
     body {
       line-height: 1.6;
       letter-spacing: normal;
+      font-size:large;
     }
 
     .ampstart-subtitle {
@@ -3647,7 +3648,7 @@ limitations under the License.
         <a class="text-decoration-none" href="index.html">Minnowspace</a>
       </h1>
       <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 px2 mb3">
-      <h2>Minnowspace is a place where we can all come together to share our stories, experiences, and ideas.</h2>
+      <h2 style="margin:20vw">Minnowspace is a place where we can all come together to share our stories, experiences, and ideas.</h2>
       </p>
 
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
