--- a/index.html
+++ b/index.html
@@ -3486,6 +3486,10 @@ limitations under the License.
           <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none block"
             style="font-size:2rem;">Travel</a>
         </li>
+                <li class="ampstart-nav-item">
+                  <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none block"
+                    style="font-size:2rem;">Fashion</a>
+                </li>
 
         <li class="ampstart-nav-item">
           <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none block"
