--- a/beardirectory.html
+++ b/beardirectory.html
@@ -13,13 +13,15 @@
   <link rel="canonical" href="https://www.minnowspace.com/beardirectory.html">
   <meta name="viewport" content="width=device-width">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <title>amp-next-page</title>
+  <title>Bear Directory</title>
   <script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
   <script async custom-element="amp-google-document-embed"
     src="https://cdn.ampproject.org/v0/amp-google-document-embed-0.1.js"></script>
     <amp-google-document-embed src="https://docs.google.com/document/d/e/2PACX-1vTLzQhSeA_GKWep1Fi8HRbehKnhDxhH8bXggLdPd41trOx6fdlPlkgtpKmh6PJRXWqdyhjBDUpNUDD2/pub" width="800" height="600" layout="responsive">
     </amp-google-document-embed>
     <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
+    <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+    <meta name="amp-consent-blocking" content="amp-ad">
   <!-- ## Setup -->
   <!--
     Import the `amp-next-page` component.
@@ -115,7 +117,16 @@
 </head>
 
 <body>
-
+  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+    <script type="application/json">
+        {
+          "postPromptUI": "postPromptUI",
+          "clientConfig": {
+            "cdid": "539b9d9f016c1",
+            "params": ""
+          }
+        }
+      </script>
   <p class="previewOnly">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis venenatis, metus a tristique aliquet, enim nibh
     efficitur sem, ut iaculis urna justo eu diam. Nullam cursus sapien et sodales posuere. Vestibulum ante ipsum primis
