--- a/hotels.html
+++ b/hotels.html
@@ -20,7 +20,7 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>Hotels</title>
+  <title>Camping in Vegas</title>
   <link rel="canonical" href="https://www.minnowspace.com/hotels.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
@@ -32,6 +32,8 @@ limitations under the License.
     content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
   <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+  <meta name="amp-consent-blocking" content="amp-ad">
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
@@ -2337,6 +2339,16 @@ limitations under the License.
 </head>
 
 <body>
+    <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+      <script type="application/json">
+          {
+            "postPromptUI": "postPromptUI",
+            "clientConfig": {
+              "cdid": "539b9d9f016c1",
+              "params": ""
+            }
+          }
+        </script>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
      window.dataLayer = window.dataLayer || [];
