--- a/menu.amp.html
+++ b/menu.amp.html
@@ -24,6 +24,8 @@ limitations under the License.
   <link rel="canonical" href="https://www.minnowspace.com/menu.amp.html" />
   <meta name="viewport" content="width=device-width" />
   <meta name="amp-google-client-id-api" content="googleanalytics" />
+  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+  <meta name="amp-consent-blocking" content="amp-ad">
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
@@ -2326,6 +2328,16 @@ limitations under the License.
 </head>
 
 <body>
+    <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+      <script type="application/json">
+          {
+            "postPromptUI": "postPromptUI",
+            "clientConfig": {
+              "cdid": "539b9d9f016c1",
+              "params": ""
+            }
+          }
+        </script>
   <!-- Start Navbar --><amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300"
     height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
