--- a/thetouroflondon.html
+++ b/thetouroflondon.html
@@ -20,19 +20,18 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>Black Doves Review</title>
-  <link rel="canonical" href="https://www.minnowspace.com/blackdoves.html">
+  <title>The Tour of London</title>
+  <link rel="canonical" href="https://www.minnowspace.com/thetouroflondon.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-<meta name="amp-consent-blocking" content="amp-ad">
 
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-
+<script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+<meta name="amp-consent-blocking" content="amp-ad">
 
   <style amp-boilerplate="">
     body {
