--- a/yotu.html
+++ b/yotu.html
@@ -11,6 +11,8 @@
     <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
     <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
     <script async custom-element="amp-next-page" src="https://cdn.ampproject.org/v0/amp-next-page-0.1.js"></script>
+    <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
+    <meta name="amp-consent-blocking" content="amp-ad">
     <style amp-boilerplate="">
         body {
             -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -118,6 +120,16 @@
 </head>
 
 <body>
+    <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+        <script type="application/json">
+          {
+            "postPromptUI": "postPromptUI",
+            "clientConfig": {
+              "cdid": "539b9d9f016c1",
+              "params": ""
+            }
+          }
+        </script>
     <form id="video-form">
         <label for="video-id">Enter YouTube Video ID:</label>
         <input type="text" id="video-id" name="videoId" required>
