--- a/2025.html
+++ b/2025.html
@@ -2333,7 +2333,7 @@ limitations under the License.
 </head>
 
 <body>
-    <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+   <div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
       <script type="application/json">
           {
             "postPromptUI": "postPromptUI",
@@ -2342,7 +2342,7 @@ limitations under the License.
               "params": ""
             }
           }
-        </script>
+        </script></div> 
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
