--- a/beardirectory.html
+++ b/beardirectory.html
@@ -116,7 +116,7 @@
   </style>
 </head>
 
-<body>
+<body><div>
   <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
     <script type="application/json">
         {
@@ -126,7 +126,7 @@
             "params": ""
           }
         }
-      </script>
+      </script></div>
   <p class="previewOnly">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis venenatis, metus a tristique aliquet, enim nibh
     efficitur sem, ut iaculis urna justo eu diam. Nullam cursus sapien et sodales posuere. Vestibulum ante ipsum primis
