--- a/blackdoves.html
+++ b/blackdoves.html
@@ -2333,7 +2333,7 @@ limitations under the License.
   </style>
 </head>
 
-<body>
+<body><div>
     <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
       <script type="application/json">
           {
@@ -2343,7 +2343,7 @@ limitations under the License.
               "params": ""
             }
           }
-        </script>
+        </script></div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
