--- a/cam.html
+++ b/cam.html
@@ -10,16 +10,18 @@
 </head>
 
 <body>
+<div>
     <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
         <script type="application/json">
-          {
-            "postPromptUI": "postPromptUI",
-            "clientConfig": {
-              "cdid": "539b9d9f016c1",
-              "params": ""
-            }
+        {
+          "postPromptUI": "postPromptUI",
+          "clientConfig": {
+            "cdid": "539b9d9f016c1",
+            "params": ""
           }
-        </script>
+        }
+      </script>
+</div>
     <h1>Camera Feed</h1>
     <video id="camera" autoplay playsinline></video>
 
