--- a/cams2.html
+++ b/cams2.html
@@ -10,16 +10,18 @@
 </head>
 
 <body>
+<div>
     <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
         <script type="application/json">
-          {
-            "postPromptUI": "postPromptUI",
-            "clientConfig": {
-              "cdid": "539b9d9f016c1",
-              "params": ""
-            }
+        {
+          "postPromptUI": "postPromptUI",
+          "clientConfig": {
+            "cdid": "539b9d9f016c1",
+            "params": ""
           }
-        </script>
+        }
+      </script>
+</div>
     <h1>Video Chat</h1>
     <video id="localVideo" autoplay muted playsinline></video>
     <video id="remoteVideo" autoplay playsinline></video>
