--- a/coffee.html
+++ b/coffee.html
@@ -2339,16 +2339,18 @@ limitations under the License.
 </head>
 
 <body>
-    <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-      <script type="application/json">
-          {
-            "postPromptUI": "postPromptUI",
-            "clientConfig": {
-              "cdid": "539b9d9f016c1",
-              "params": ""
-            }
+<div>
+  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+    <script type="application/json">
+        {
+          "postPromptUI": "postPromptUI",
+          "clientConfig": {
+            "cdid": "539b9d9f016c1",
+            "params": ""
           }
-        </script>
+        }
+      </script>
+</div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
