--- a/partycity.html
+++ b/partycity.html
@@ -36,8 +36,7 @@ limitations under the License.
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
 
   <style amp-boilerplate="">
     body {
@@ -2342,8 +2341,8 @@ limitations under the License.
 </head>
 
 <body class="img-background">
-    <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-      <script type="application/json">
+<div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+  <script type="application/json">
           {
             "postPromptUI": "postPromptUI",
             "clientConfig": {
@@ -2351,7 +2350,7 @@ limitations under the License.
               "params": ""
             }
           }
-        </script>
+        </script></div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
