--- a/yotu.html
+++ b/yotu.html
@@ -120,16 +120,18 @@
 </head>
 
 <body>
+<div>
     <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
         <script type="application/json">
-          {
-            "postPromptUI": "postPromptUI",
-            "clientConfig": {
-              "cdid": "539b9d9f016c1",
-              "params": ""
-            }
+        {
+          "postPromptUI": "postPromptUI",
+          "clientConfig": {
+            "cdid": "539b9d9f016c1",
+            "params": ""
           }
-        </script>
+        }
+      </script>
+</div>
     <form id="video-form">
         <label for="video-id">Enter YouTube Video ID:</label>
         <input type="text" id="video-id" name="videoId" required>
