--- a/2024.html
+++ b/2024.html
@@ -2333,16 +2333,32 @@ limitations under the License.
 </head>
 
 <body>
-    <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-      <script type="application/json">
-          {
-            "postPromptUI": "postPromptUI",
-            "clientConfig": {
-              "cdid": "539b9d9f016c1",
-              "params": ""
-            }
-          }
-        </script>
+  <div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+    <script type="application/json">
+      {
+        "postPromptUI": "postPromptUI",
+        "clientConfig": {
+          "cdid": "539b9d9f016c1",
+          "params": ""
+        }
+      }
+    </script></div>
+
+
+<div><amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+  <script type="application/json">
+    {
+      "postPromptUI": "postPromptUI",
+      "clientConfig": {
+        "cdid": "539b9d9f016c1",
+        "params": ""
+      }
+    }
+  </script>
+  <div id="postPromptUI">
+    <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
+  </div>
+</amp-consent></div>
   <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
